<resources>
    <string name="app_name">SafeSt.</string>
    <string name="start">Start</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="email" translatable="false">Email*</string>
    <string name="password" translatable="false">Password*</string>
    <string name="sign_in_to_your_account" translatable="false">Sign in to your account</string>
    <string name="sign_up_instead" translatable="false">Sign up instead?</string>
    <string name="create_an_account" translatable="false">Create an account</string>
    <string name="first_name" translatable="false">First Name*</string>
    <string name="last_name" translatable="false">Last Name*</string>
    <string name="phone_number" translatable="false">Phone Number*</string>
    <string name="sign_up_password" translatable="false">Password*</string>
    <string name="repeat_password" translatable="false">Repeat Password*</string>
    <string name="sign_up_next" translatable="false">Sign Up</string>
    <string name="sign_in_instead" translatable="false">Sign in instead?</string>
    <string name="one_more_step" translatable="false">One more step…</string>
    <string name="add_users_as_your_trusted_contacts" translatable="false">add users as your trusted contacts</string>
    <string name="or" translatable="false">Or</string>
    <string name="phone_number_trusted_contact" translatable="false">Phone Number</string>
    <string name="continu" translatable="false">Continue</string>
    <string name="skip" translatable="false">Skip</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_trusted_contacts" translatable="false">Trusted contacts</string>
    <string name="menu_history" translatable="false">History</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_emergencies" translatable="false">Emergencies</string>
    <string name="kidnapping" translatable="false">Kidnapping</string>
    <string name="harassment" translatable="false">Harassment</string>
    <string name="fire" translatable="false">Fire</string>
    <string name="car_fault" translatable="false">Car Fault</string>
    <string name="title_activity_home" translatable="false">home</string>
    <string name="user_name" translatable="false">User Name</string>
    <string name="profile_picture" translatable="false">Profile picture</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="home" translatable="false">Home</string>
    <string name="create_trip" translatable="false">Create Trip</string>
    <string name="trusted_contact" translatable="false">Trusted contacts</string>
    <string name="report_location" translatable="false">Report location</string>
    <string name="destination" translatable="false">destination</string>
    <string name="source" translatable="false">source</string>
    <string name="what_is_the_type_of_the_emergency" translatable="false">What is the type of the emergency?</string>
    <string name="choose_type_of_emergency" translatable="false">Choose type of emergency</string>
    <string name="report_details" translatable="false">Report details</string>
    <string name="submit_report" translatable="false">Submit Report</string>
    <string-array name="Emergencies">
        <item>Fire</item>
        <item>Harassment</item>
        <item>Car fault</item>
        <item>Accident</item>
        <item>Robbery</item>
    </string-array>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="title_activity_report_location_map" translatable="false">ReportLocationMap</string>
    <string name="title_activity_create_trip" translatable="false">CreateTripActivity</string>
    <string name="this_is_the_timer" translatable="false">this is the timer</string>
    <string name="i_arrived" translatable="false">I arrived</string>
    <string name="extend_timer" translatable="false">Extend Timer</string>
    <string name="fire_emergency" translatable="false">Fire Emergency</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="timer_cancelled" translatable="false">Timer cancelled</string>
    <string name="timer_finished" translatable="false">Timer finished!</string>
    <string name="timer_stopped" translatable="false">Timer stopped</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="time" translatable="false">Time</string>
    <string name="please_confirm_you_arrived_to_your_destination" translatable="false">Please confirm you arrived to your destination?</string>
    <string name="danger" translatable="false">Danger</string>
    <string name="contact_email" translatable="false">Add Contact Email</string>
    <string name="contact_name" translatable="false">Contact Name</string>
    <string name="add" translatable="false">add</string>
    <string name="this_is_a_name" translatable="false">Name</string>
    <string name="this_is_email" translatable="false">Email</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="no_extend_time" translatable="false">No, extend time</string>
    <string name="add_report" translatable="false">Add report</string>
    <string name="view_reports" translatable="false">View reports</string>
    <string name="location" translatable="false">Location</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="ok" translatable="false">Confirm</string>
    <string name="fire_an_emergency_and_notify_your_trusted_contacts_instantly" translatable="false">Fire an Emergency and Notify Your Trusted Contacts Instantly!</string>
    <string name="robbery" translatable="false">Robbery</string>
    <string name="murder" translatable="false">Murder</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="trusted_contacts" translatable="false">Trusted Contacts</string>
    <string name="reports" translatable="false">Reports</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="arrival_time" translatable="false">Arrival time:</string>
    <string name="walking" translatable="false">walking</string>
    <string name="paragraph1" translatable="false">الجرائم في الشارع المصري وأثرها على المجتمع تعاني مصر، مثل العديد من الدول، من ظاهرة الجرائم في الشوارع. تتنوع هذه الجرائم بين السرقات، والاعتداءات الجسدية، والنشل، وغيرها من الأعمال الإجرامية. تلك الجرائم لها تأثيرات سلبية على المجتمع المصري بشكل عام. أحد أبرز التأثيرات السلبية للجرائم في الشوارع هو انعكاسها على الأمن والاستقرار العام. تسبب الجرائم الشوارع في إحداث شعور بعدم الأمان بين أفراد المجتمع وقد تؤدي إلى تراجع الحركة الاقتصادية والاستثمارات. الأشخاص الذين يشعرون بعدم الأمان في الشوارع يترددون في الخروج والتنقل، وهذا يؤثر سلبًا على الحياة الاجتماعية والاقتصادية للمجتمع بشكل عام. علاوة على ذلك، تؤثر الجرائم في الشوارع على الصحة النفسية والعاطفية للأفراد. الخوف والتوتر الناجم عن التعرض لجرائم في الشوارع يمكن أن يؤثر على جودة حياتهم اليومية ويرفع مستوى القلق والتوتر الذي يمكن أن يؤثر على صحتهم العامة. قد يعيش الناس في حالة من الهلع والقلق المستمر، وهو ما ينعكس على نمط حياتهم وعلاقاتهم الاجتماعية. بالإضافة إلى ذلك، تتسبب الجرائم في الشوارع في تفشي ثقافة العنف والجريمة في المجتمع. قد يقلل الأفراد المتضررون من تلك الجرائم من مستوى الثقة والاحترام في المجتمع ويدفعهم إلى التصعيد والانتقام. هذا الدوران السلبي يؤثر على العلاقات الاجتماعية ويعزز دورة العنف والجريمة. لا يمكننا إغفال تأثير الجرائم في الشوارع على التنمية الاقتصادية والسياحة في مصر. تعد الأمن والاستقرار عاملًا رئيسيًا لجذب الاستثمارات والسياحة، وتأثير الجرائم يمكن أن يؤثر سلبًا على سمعة البلد والثقة في بيئتها الأمنية. قد يكون للجرائم في الشوارع تأثير سلبي على الاقتصاد المحلي وتدفق الاستثمارات وفرص العمل. من أجل التصدي لهذه التحديات، يجب أن تتعاون الحكومة والمجتمع المدني والأفراد معًا. يجب تعزيز قوى الأمن وتعزيز الرقابة وتوفير التدريب والمعدات اللازمة لرجال الشرطة. يجب أن تكون هناك حملات توعية للمجتمع حول أهمية الأمن وأثر الجرائم في الشوارع، وتشجيع الإبلاغ عن الجرائم والتعاون مع السلطات المختصة. بالإضافة إلى ذلك، يجب العمل على تحسين البنية التحتية والإضاءة في الشوارع وتعزيز أنظمة المراقبة والتكنولوجيا لمكافحة الجريمة. ينبغي تعزيز برامج تأهيل المجتمع وتوفير فرص التعليم والعمل للشباب كوسيلة للحد من الجريمة والبطالة. تعد مكافحة الجرائم في الشوارع تحديًا شاملاً يتطلب جهودًا مشتركة ومستدامة. من خلال تعزيز الأمن وتوعية المجتمع وتحسين الظروف المعيشية، يمكننا الحد من الجرائم وبناء مجتمع آمن ومزدهر في مصر.</string>
</resources>