<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpTrusted"
    android:padding="50dp">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_more_step"
        android:textColor="@color/blue1"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email"/>


    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_users_as_your_trusted_contacts"
        android:textColor="@color/blue1"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintBottom_toTopOf="@id/email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintBottom_toTopOf="@id/text3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/blue1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/blue1"
        android:textSize="40sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/phoneNumber"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumber"
        android:hint="@string/phone_number_trusted_contact"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/blue1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cornerRadius="10dp"
        android:textSize="20sp"
        android:text="@string/continu"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber"
        app:layout_constraintBottom_toBottomOf="@id/btn_skip"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cornerRadius="10dp"
        android:textSize="20sp"
        android:text="@string/skip"
        app:layout_constraintTop_toBottomOf="@id/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>