<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".views.Login">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/light_blue1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:endIconTint="@color/light_blue1"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/signIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#8D6E63" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/light_blue1"
        app:layout_constraintBottom_toTopOf="@id/btn_signIn"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#8D6E63" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cornerRadius="10dp"
        android:textSize="20sp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/btn_voice_next"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_voice_next"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cornerRadius="10dp"
        android:textSize="20sp"
        android:text="@string/sign_up_instead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signIn" />
</androidx.constraintlayout.widget.ConstraintLayout>